--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,7 @@
+body {
+  width: 960px;
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -7,6 +11,17 @@ blockquote {
 cite {
   display: block;
   margin-top: 10px;
+}
+
+#external-links {
+  width: 200px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+main {
+  width: 756px;
+  display: inline-block;
 }
 
 #external-links ul {
